--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <img src="https://via.placeholder.com/150" alt="Profile Picture">
 
         <h1>Your Name</h1>
-        <div class="title">Computer Engineering Technology Student</div>
+        <div class="title">Information Technology Student</div>
 
         <div class="bio">
             Hi! I am a passionate student who enjoys learning web development,
@@ -116,7 +116,7 @@
         </div>
 
         <div class="info">
-            <p><i class="fas fa-graduation-cap"></i> Course: Computer Engineering Technology</p>
+            <p><i class="fas fa-graduation-cap"></i> Course: Bachelor Of Science Information Technology</p>
             <p><i class="fas fa-code"></i> Skills: HTML, CSS, JavaScript</p>
             <p><i class="fas fa-heart"></i> Interests: Gaming, Designing</p>
         </div>
