--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
 
     <div class="profile-card">
-        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <img src="profile.jpg" alt="Profile Picture">
 
         <h1>Your Name</h1>
         <div class="title">Information Technology Student</div>
@@ -118,19 +118,19 @@
         <div class="info">
             <p><i class="fas fa-graduation-cap"></i> Course: Bachelor Of Science Information Technology</p>
             <p><i class="fas fa-code"></i> Skills: HTML, CSS, JavaScript</p>
-            <p><i class="fas fa-heart"></i> Interests: Gaming, Designing</p>
+            <p><i class="fas fa-heart"></i> Interests: Gaming, Designing, coding, Networking</p>
         </div>
 
         <div class="social-links">
-            <a href="https://facebook.com/yourprofile" class="facebook" target="_blank">
+            <a href="https://facebook.com/alyssarsarraga" class="facebook" target="_blank">
                 <i class="fab fa-facebook-f"></i>
             </a>
 
-            <a href="https://instagram.com/yourprofile" class="instagram" target="_blank">
+            <a href="https://instagram.com/prsia_" class="instagram" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
 
-            <a href="https://tiktok.com/@yourprofile" class="tiktok" target="_blank">
+            <a href="https://tiktok.com/@persiaqq" class="tiktok" target="_blank">
                 <i class="fab fa-tiktok"></i>
             </a>
         </div>
