--- a/index.html
+++ b/index.html
@@ -7,107 +7,107 @@
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <style>
-        body {
-            font-family: 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+ <style>
+    body {
+        font-family: 'Segoe UI', sans-serif;
+        background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-        .profile-card {
-            background: #fff;
-            width: 380px;
-            padding: 30px;
-            border-radius: 18px;
-            text-align: center;
-            box-shadow: 0 20px 30px rgba(0,0,0,0.2);
-        }
+    .profile-card {
+        background: #ffffff;
+        width: 380px;
+        padding: 30px;
+        border-radius: 20px;
+        text-align: center;
+        box-shadow: 0 15px 25px rgba(0,0,0,0.12);
+    }
 
-        .profile-card img {
-            width: 140px;
-            height: 140px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #764ba2;
-        }
+    .profile-card img {
+        width: 140px;
+        height: 140px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 4px solid #cdb4db;
+    }
 
-        h1 {
-            margin-top: 15px;
-            color: #333;
-        }
+    h1 {
+        margin-top: 15px;
+        color: #4a4a4a;
+    }
 
-        .title {
-            font-size: 14px;
-            color: #777;
-            margin-bottom: 10px;
-        }
+    .title {
+        font-size: 14px;
+        color: #8d99ae;
+        margin-bottom: 10px;
+    }
 
-        .bio {
-            font-size: 14px;
-            color: #555;
-            margin: 15px 0;
-            line-height: 1.6;
-        }
+    .bio {
+        font-size: 14px;
+        color: #6c757d;
+        margin: 15px 0;
+        line-height: 1.6;
+    }
 
-        .info {
-            text-align: left;
-            margin-top: 15px;
-            font-size: 14px;
-            color: #444;
-        }
+    .info {
+        text-align: left;
+        margin-top: 15px;
+        font-size: 14px;
+        color: #555;
+    }
 
-        .info p {
-            margin: 6px 0;
-        }
+    .info p {
+        margin: 6px 0;
+    }
 
-        .info i {
-            color: #764ba2;
-            margin-right: 8px;
-        }
+    .info i {
+        color: #b5838d;
+        margin-right: 8px;
+    }
 
-        .social-links {
-            margin-top: 20px;
-        }
+    .social-links {
+        margin-top: 22px;
+    }
 
-        .social-links a {
-            text-decoration: none;
-            color: white;
-            margin: 0 8px;
-            font-size: 18px;
-            width: 42px;
-            height: 42px;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            transition: 0.3s;
-        }
+    .social-links a {
+        text-decoration: none;
+        color: #fff;
+        margin: 0 8px;
+        font-size: 18px;
+        width: 42px;
+        height: 42px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        transition: 0.3s ease;
+    }
 
-        .facebook { background: #1877f2; }
-        .instagram { background: #e1306c; }
-        .tiktok { background: #000; }
+    /* Pastel Social Colors */
+    .facebook { background: #bde0fe; }
+    .instagram { background: #ffc8dd; }
+    .tiktok { background: #cdb4db; }
 
-        .social-links a:hover {
-            transform: scale(1.15);
-            opacity: 0.9;
-        }
+    .social-links a:hover {
+        transform: scale(1.15);
+        opacity: 0.85;
+    }
 
-        .footer {
-            margin-top: 20px;
-            font-size: 12px;
-            color: #aaa;
-        }
-    </style>
+    .footer {
+        margin-top: 20px;
+        font-size: 12px;
+        color: #adb5bd;
+    }
+</style>
 </head>
-<body>
 
     <div class="profile-card">
         <img src="profile.jpg" alt="Profile Picture">
 
-        <h1>Your Name</h1>
+        <h1>Alyss R. Sarraga</h1>
         <div class="title">Information Technology Student</div>
 
         <div class="bio">
@@ -118,7 +118,7 @@
         <div class="info">
             <p><i class="fas fa-graduation-cap"></i> Course: Bachelor Of Science Information Technology</p>
             <p><i class="fas fa-code"></i> Skills: HTML, CSS, JavaScript</p>
-            <p><i class="fas fa-heart"></i> Interests: Gaming, Designing, coding, Networking</p>
+            <p><i class="fas fa-heart"></i> Interests: Gaming, Designing, Coding, Networking</p>
         </div>
 
         <div class="social-links">
