--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="profile-card">
         <img src="profile.jpg" alt="Profile Picture">
 
-        <h1>Alyss R. Sarraga</h1>
+        <h1>Alyssa R. Sarraga</h1>
         <div class="title">Information Technology Student</div>
 
         <div class="bio">
