--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Profile</title>
 
-<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
@@ -46,47 +45,80 @@ body {
     align-items: center;
     padding: 20px;
     transition: 0.4s;
+    overflow: hidden;
 }
 
-/* ===== FLOATING ANIMATION ===== */
+/* ===== ANIMATIONS ===== */
 @keyframes float {
     0% { transform: translateY(0); }
-    50% { transform: translateY(-10px); }
+    50% { transform: translateY(-12px); }
     100% { transform: translateY(0); }
 }
 
-/* ===== CARD ===== */
+@keyframes sparkle {
+    0%,100% { opacity: 0.3; transform: scale(0.8); }
+    50% { opacity: 1; transform: scale(1); }
+}
+
+@keyframes cloud {
+    0% { transform: translateX(-20px); }
+    50% { transform: translateX(20px); }
+    100% { transform: translateX(-20px); }
+}
+
+/* ===== PROFILE CARD ===== */
 .profile-card {
     background: var(--card-bg);
     width: 100%;
     max-width: 420px;
     padding: 30px;
-    border-radius: 32px;
+    border-radius: 34px;
     text-align: center;
-    box-shadow: 0 20px 35px rgba(0,0,0,0.18);
     position: relative;
+    box-shadow: 0 22px 40px rgba(0,0,0,0.18);
     animation: float 4s ease-in-out infinite;
-    transition: 0.4s;
+    z-index: 5;
 }
 
-/* ===== KAWAII CORNERS ===== */
-.profile-card::before,
-.profile-card::after {
+/* ===== CUTE CORNERS ===== */
+.profile-card::before {
     content: "💗";
     position: absolute;
-    font-size: 28px;
+    top: -12px;
+    left: -12px;
+    font-size: 26px;
 }
-
-.profile-card::before {
-    top: -10px;
-    left: -10px;
-}
-
 .profile-card::after {
-    content: "⭐";
-    bottom: -10px;
-    right: -10px;
+    content: "🎮";
+    position: absolute;
+    bottom: -12px;
+    right: -12px;
+    font-size: 26px;
 }
+
+/* ===== PIXEL STARS ===== */
+.pixel-star {
+    position: absolute;
+    font-size: 12px;
+    font-family: monospace;
+    animation: sparkle 3s infinite;
+    opacity: 0.8;
+}
+
+.ps1 { top: 8%; left: 20%; animation-delay: 0s; }
+.ps2 { top: 15%; right: 18%; animation-delay: 1s; }
+.ps3 { bottom: 18%; left: 22%; animation-delay: 2s; }
+.ps4 { bottom: 10%; right: 25%; animation-delay: 1.5s; }
+
+/* ===== CLOUDS ===== */
+.cloud {
+    position: absolute;
+    font-size: 40px;
+    opacity: 0.35;
+    animation: cloud 8s ease-in-out infinite;
+}
+.c1 { top: 10%; left: 5%; }
+.c2 { bottom: 15%; right: 5%; animation-delay: 4s; }
 
 /* ===== IMAGE ===== */
 .profile-card img {
@@ -103,13 +135,18 @@ h1 {
     font-size: 22px;
     color: var(--text-main);
 }
-
 .title {
     font-size: 14px;
     color: var(--text-sub);
+    margin-bottom: 8px;
+}
+.gamer-tag {
+    font-size: 13px;
+    color: var(--accent);
     margin-bottom: 14px;
 }
 
+/* ===== BIO ===== */
 .bio {
     font-size: 14px;
     color: var(--text-main);
@@ -126,21 +163,13 @@ h1 {
     font-size: 14px;
     color: var(--text-main);
 }
-
-.info p {
-    margin-bottom: 8px;
-}
-
-.info i {
-    color: var(--accent);
-    margin-right: 8px;
-}
+.info p { margin-bottom: 8px; }
+.info i { color: var(--accent); margin-right: 8px; }
 
 /* ===== SOCIAL ===== */
 .social-links {
     margin-top: 22px;
 }
-
 .social-links a {
     text-decoration: none;
     color: white;
@@ -154,13 +183,12 @@ h1 {
     border-radius: 50%;
     transition: 0.3s;
 }
-
 .facebook { background: #bde0fe; }
 .instagram { background: linear-gradient(45deg, #feda75, #d62976, #962fbf); }
 .tiktok { background: #cdb4db; }
 
 .social-links a:hover {
-    transform: scale(1.2) rotate(10deg);
+    transform: scale(1.2) rotate(12deg);
 }
 
 /* ===== DARK MODE BUTTON ===== */
@@ -183,7 +211,7 @@ h1 {
     color: var(--text-sub);
 }
 
-/* ===== SMALL PHONES ===== */
+/* ===== MOBILE ===== */
 @media (max-width: 360px) {
     h1 { font-size: 20px; }
     .profile-card { padding: 22px; }
@@ -197,26 +225,36 @@ h1 {
 
 <body>
 
+<!-- Clouds -->
+<div class="cloud c1">☁️</div>
+<div class="cloud c2">☁️</div>
+
+<!-- Pixel Stars -->
+<div class="pixel-star ps1">✦</div>
+<div class="pixel-star ps2">✧</div>
+<div class="pixel-star ps3">✦</div>
+<div class="pixel-star ps4">✧</div>
+
 <div class="profile-card">
-    <button class="toggle" onclick="document.body.classList.toggle('dark')">
-        🌙 Dark
-    </button>
+
+    <button class="toggle" onclick="document.body.classList.toggle('dark')">🌙</button>
 
     <img src="profile.jpg" alt="Profile Picture">
 
     <h1>Alyssa R. Sarraga</h1>
     <div class="title">BS Information Technology Student</div>
+    <div class="gamer-tag">🎮 Gamer • Designer • Coder</div>
 
     <div class="bio">
-        Hi! I’m an IT student who loves cute UI designs, web development,
-        and learning new technologies while having fun coding 💕
+        I love kawaii pixel aesthetics, gaming, and building fun web projects
+        while learning new technologies ✨⭐
     </div>
 
     <div class="info">
         <p><i class="fas fa-graduation-cap"></i> Course: BS Information Technology</p>
         <p><i class="fas fa-code"></i> Skills: HTML, CSS, JavaScript</p>
         <p><i class="fas fa-network-wired"></i> Knowledge: Networking Basics</p>
-        <p><i class="fas fa-heart"></i> Interests: Gaming, Designing, Coding</p>
+        <p><i class="fas fa-gamepad"></i> Hobbies: Gaming, UI Design</p>
     </div>
 
     <div class="social-links">
@@ -232,7 +270,7 @@ h1 {
     </div>
 
     <div class="footer">
-        © 2026 Alyssa R. Sarraga 💗
+        © 2026 Alyssa R. Sarraga ⭐💗
     </div>
 </div>
 
