--- a/index.html
+++ b/index.html
@@ -3,309 +3,247 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Profile</title>
+<title>Kawaii Gamer Profile</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-/* ===== RESET ===== */
+/* ================= RESET ================= */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* ===== VARIABLES ===== */
+/* ================= VARIABLES ================= */
 :root {
-    --bg-gradient: linear-gradient(135deg, #fbc2eb, #a6c1ee);
-    --card-bg: #ffffff;
-    --text-main: #4a4a4a;
-    --text-sub: #8d99ae;
-    --accent: #cdb4db;
-    --soft-box: #f8f9ff;
-}
-
-/* ===== DARK MODE ===== */
-body.dark {
-    --bg-gradient: linear-gradient(135deg, #2b2d42, #3a3d5c);
-    --card-bg: #2f3147;
-    --text-main: #f1f1f1;
-    --text-sub: #cfcfe8;
+    --bg: linear-gradient(135deg,#2b2d42,#3a3d5c);
+    --card: #2f3147;
+    --text: #f1f1f1;
+    --sub: #cfcfe8;
     --accent: #ffc8dd;
-    --soft-box: #3c3f5c;
+    --soft: #3c3f5c;
 }
 
-/* ===== BODY ===== */
+/* ================= BODY ================= */
 body {
     font-family: 'Segoe UI', sans-serif;
-    background: var(--bg-gradient);
+    background: var(--bg);
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    transition: 0.4s;
 }
 
-/* ===== RETRO LOADING SCREEN ===== */
+/* ================= LOADING ================= */
 .loading {
     position: fixed;
     inset: 0;
-    background: #1b1b2f;
+    background: #111;
     color: #fff;
     font-family: monospace;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 999;
-    animation: hideLoader 2.5s forwards;
+    animation: hide 2.8s forwards;
 }
-
-.loading-box {
-    text-align: center;
+@keyframes hide {
+    90% {opacity:1}
+    100% {opacity:0;visibility:hidden}
 }
-
-.loading-bar {
+.bar {
     width: 200px;
-    height: 14px;
+    height: 12px;
     border: 2px solid #fff;
     margin-top: 10px;
-    position: relative;
 }
-
-.loading-fill {
+.fill {
     height: 100%;
     width: 0;
-    background: #fbc2eb;
+    background: #ffc8dd;
     animation: load 2s forwards;
 }
+@keyframes load {to{width:100%}}
 
-@keyframes load {
-    to { width: 100%; }
-}
-
-@keyframes hideLoader {
-    90% { opacity: 1; }
-    100% { opacity: 0; visibility: hidden; }
-}
-
-/* ===== ANIMATIONS ===== */
+/* ================= FLOAT ================= */
 @keyframes float {
-    0%,100% { transform: translateY(0); }
-    50% { transform: translateY(-12px); }
+    0%,100%{transform:translateY(0)}
+    50%{transform:translateY(-10px)}
 }
 
-@keyframes sparkle {
-    0%,100% { opacity: 0.3; transform: scale(0.8); }
-    50% { opacity: 1; transform: scale(1); }
-}
-
-@keyframes cloudMove {
-    0% { transform: translateX(-30px); }
-    50% { transform: translateX(30px); }
-    100% { transform: translateX(-30px); }
-}
-
-/* ===== CLOUDS ===== */
-.cloud {
-    position: absolute;
-    font-size: 42px;
-    opacity: 0.35;
-    animation: cloudMove 10s ease-in-out infinite;
-}
-
-.c1 { top: 5%; left: 5%; }
-.c2 { top: 15%; right: 10%; animation-delay: 2s; }
-.c3 { top: 30%; left: 15%; animation-delay: 4s; }
-.c4 { bottom: 30%; right: 12%; animation-delay: 6s; }
-.c5 { bottom: 15%; left: 8%; animation-delay: 8s; }
-.c6 { bottom: 5%; right: 5%; animation-delay: 10s; }
-
-/* ===== PIXEL STARS ===== */
-.pixel-star {
-    position: absolute;
-    font-size: 12px;
-    font-family: monospace;
-    animation: sparkle 3s infinite;
-}
-
-.ps1 { top: 8%; left: 25%; }
-.ps2 { top: 12%; right: 22%; animation-delay: 1s; }
-.ps3 { top: 40%; left: 10%; animation-delay: 2s; }
-.ps4 { top: 45%; right: 15%; animation-delay: 1.5s; }
-.ps5 { bottom: 25%; left: 18%; animation-delay: 0.5s; }
-.ps6 { bottom: 18%; right: 20%; animation-delay: 2.5s; }
-.ps7 { bottom: 10%; left: 35%; animation-delay: 1.8s; }
-
-/* ===== PROFILE CARD ===== */
+/* ================= CARD ================= */
 .profile-card {
-    background: var(--card-bg);
-    width: 100%;
+    background: var(--card);
     max-width: 420px;
-    padding: 30px;
-    border-radius: 36px;
+    width: 90%;
+    padding: 28px;
+    border-radius: 18px;
     text-align: center;
-    box-shadow: 0 22px 40px rgba(0,0,0,0.18);
     position: relative;
-    animation: float 4s ease-in-out infinite;
-    z-index: 5;
+    animation: float 4s infinite;
+    box-shadow:
+        0 0 0 5px #000,
+        0 0 0 9px var(--accent);
 }
 
-.profile-card::before {
-    content: "💗";
-    position: absolute;
-    top: -12px;
-    left: -12px;
-    font-size: 26px;
+/* ================= SHAKE (FAKE VIBRATION) ================= */
+@keyframes shake {
+    0%,100%{transform:translateX(0)}
+    25%{transform:translateX(-2px)}
+    75%{transform:translateX(2px)}
 }
+.shake {animation: shake .2s}
 
-.profile-card::after {
-    content: "🎮";
-    position: absolute;
-    bottom: -12px;
-    right: -12px;
-    font-size: 26px;
-}
-
-/* ===== IMAGE ===== */
+/* ================= IMAGE ================= */
 .profile-card img {
-    width: 130px;
-    height: 130px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     border: 4px solid var(--accent);
     object-fit: cover;
 }
 
-/* ===== TEXT ===== */
-h1 { font-size: 22px; color: var(--text-main); }
-.title { font-size: 14px; color: var(--text-sub); }
-.gamer-tag { font-size: 13px; color: var(--accent); margin: 10px 0; }
+/* ================= TEXT ================= */
+h1 {color:var(--text);margin-top:10px}
+.title {color:var(--sub);font-size:14px}
+.tag {color:var(--accent);font-size:13px;margin:8px 0}
 
-.bio {
-    font-size: 14px;
-    color: var(--text-main);
-    margin-bottom: 16px;
-    line-height: 1.6;
-}
-
-/* ===== INFO ===== */
+/* ================= INFO ================= */
 .info {
-    background: var(--soft-box);
-    border-radius: 18px;
-    padding: 15px;
+    background: var(--soft);
+    padding: 14px;
+    border-radius: 14px;
     text-align: left;
+    margin-top: 14px;
     font-size: 14px;
 }
+.info i {color:var(--accent);margin-right:6px}
 
-.info i {
-    color: var(--accent);
-    margin-right: 8px;
+/* ================= SOCIAL ================= */
+.social-links {
+    display:flex;
+    justify-content:center;
+    gap:14px;
+    margin-top:18px;
 }
-
-/* ===== SOCIAL ===== */
 .social-links a {
-    width: 44px;
-    height: 44px;
-    margin: 0 8px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    color: #fff;
-    transition: 0.3s;
+    width:44px;
+    height:44px;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:#fff;
+    transition:.3s;
 }
-
-.facebook { background: #bde0fe; }
-.instagram { background: linear-gradient(45deg, #feda75, #d62976, #962fbf); }
-.tiktok { background: #cdb4db; }
-
 .social-links a:hover {
-    transform: scale(1.2) rotate(12deg);
+    transform:scale(1.2);
 }
 
-/* ===== DARK MODE BUTTON ===== */
-.toggle {
-    position: absolute;
-    top: 14px;
-    right: 16px;
-    border: none;
-    background: var(--soft-box);
-    border-radius: 20px;
-    padding: 6px 10px;
-    cursor: pointer;
+/* ================= HEART RAIN ================= */
+.heart {
+    position:absolute;
+    top:-20px;
+    animation: fall 6s linear infinite;
+}
+@keyframes fall {
+    to {transform:translateY(110vh)}
 }
 
-/* ===== FOOTER ===== */
+/* ================= PIXEL BEAR ================= */
+.bear {
+    position:absolute;
+    bottom:-6px;
+    right:12px;
+    font-size:26px;
+    animation: wave 1.5s infinite;
+}
+@keyframes wave {
+    0%,100%{transform:rotate(0)}
+    50%{transform:rotate(10deg)}
+}
+
+/* ================= BUTTONS ================= */
+.toggle, .sound {
+    position:absolute;
+    top:12px;
+    padding:6px 10px;
+    border-radius:20px;
+    background:var(--soft);
+    border:none;
+    cursor:pointer;
+}
+.toggle {right:12px}
+.sound {left:12px}
+
+/* ================= FOOTER ================= */
 .footer {
-    margin-top: 16px;
-    font-size: 12px;
-    color: var(--text-sub);
+    margin-top:14px;
+    font-size:12px;
+    color:var(--sub);
 }
 </style>
 </head>
 
 <body>
 
-<!-- LOADING SCREEN -->
+<!-- LOADING -->
 <div class="loading">
-    <div class="loading-box">
-        <div>Loading Profile...</div>
-        <div class="loading-bar">
-            <div class="loading-fill"></div>
-        </div>
+    <div>
+        Loading Profile...
+        <div class="bar"><div class="fill"></div></div>
     </div>
 </div>
 
-<!-- CLOUDS -->
-<div class="cloud c1">☁️</div>
-<div class="cloud c2">☁️</div>
-<div class="cloud c3">☁️</div>
-<div class="cloud c4">☁️</div>
-<div class="cloud c5">☁️</div>
-<div class="cloud c6">☁️</div>
+<!-- HEART RAIN -->
+<div class="heart" style="left:10%">💗</div>
+<div class="heart" style="left:40%">💖</div>
+<div class="heart" style="left:70%">💗</div>
 
-<!-- PIXEL STARS -->
-<div class="pixel-star ps1">✦</div>
-<div class="pixel-star ps2">✧</div>
-<div class="pixel-star ps3">✦</div>
-<div class="pixel-star ps4">✧</div>
-<div class="pixel-star ps5">✦</div>
-<div class="pixel-star ps6">✧</div>
-<div class="pixel-star ps7">✦</div>
+<!-- AUDIO -->
+<audio id="click" src="click.mp3"></audio>
+<audio id="chip" src="chiptune.mp3" loop></audio>
 
-<div class="profile-card">
-    <button class="toggle" onclick="document.body.classList.toggle('dark')">🌙</button>
+<div class="profile-card" id="card">
+    <button class="sound" onclick="toggleMusic()">🎧</button>
+    <button class="toggle" onclick="shake()">🎮</button>
 
     <img src="profile.jpg">
     <h1>Alyssa R. Sarraga</h1>
     <div class="title">BS Information Technology</div>
-    <div class="gamer-tag">🎮 Gamer • Designer • Coder</div>
-
-    <div class="bio">
-        I love kawaii pixel designs, gaming, and building fun
-        web projects while learning new technologies ⭐☁️
-    </div>
+    <div class="tag">🎮 Gamer • Designer • Coder</div>
 
     <div class="info">
-        <p><i class="fas fa-graduation-cap"></i> BS Information Technology</p>
         <p><i class="fas fa-code"></i> HTML, CSS, JavaScript</p>
         <p><i class="fas fa-gamepad"></i> Gaming & UI Design</p>
     </div>
 
     <div class="social-links">
-        <a href="https://facebook.com/alyssarsarraga" class="facebook" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://instagram.com/prsia_" class="instagram" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://tiktok.com/@persiaqq" class="tiktok" target="_blank">
-            <i class="fab fa-tiktok"></i>
-        </a>
+        <a href="#" onmouseenter="playClick()">F</a>
+        <a href="#" onmouseenter="playClick()">I</a>
+        <a href="#" onmouseenter="playClick()">T</a>
     </div>
 
-    <div class="footer">© 2026 Alyssa R. Sarraga 💗</div>
+    <div class="footer">© 2026 Alyssa 💗</div>
+    <div class="bear">🐻</div>
 </div>
+
+<script>
+function playClick(){
+    document.getElementById("click").play();
+}
+function toggleMusic(){
+    const m=document.getElementById("chip");
+    m.paused?m.play():m.pause();
+}
+function shake(){
+    const c=document.getElementById("card");
+    c.classList.add("shake");
+    setTimeout(()=>c.classList.remove("shake"),200);
+}
+</script>
 
 </body>
 </html>
